samples/_failures_safe/1761694943_e61498_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_24719d47.c: In function ‘main’:
./samples/SAFE/__tmp_24719d47.c:180:5: error: expected declaration or statement at end of input
  180 |     }
      |     ^
